# adjtimex

./: COPYRIGHT  ChangeLog  Makefile  Makefile.in  README  README.ru  adjtimex.8  adjtimex.c  adjtimex.c.orig  adjtimex.lsm  adjtimex.lsm.in  adjtimex.man  adjtimex_1.29.orig.tar.gz.delta  adjtimex_1.29.orig.tar.gz.id  changes  clockdiff.c  config.cache  config.h  config.h.in  config.status  configure  configure.in  mat.c  mat.h
debian/: NEWS  README  README.Debian  README.debian  adjtimex  adjtimex.init  adjtimex.install  adjtimex.manpages  adjtimex.service  adjtimexconfig  adjtimexconfig.8  adjust  changelog  changelog.dch  conffiles  config  conftimex  control  copyright  dirs  files  notes  postinst  postrm  rc  rules  templates  watch  y2k.patch
debian/contrib/: ntp-drift_to_freq.sh
debian/patches/: 01-makefile.in-ldflags.diff  02-fix-manpage  03-adjtimex-Blocks-the-access-to-the-hardware-cmos-clock.patch  03-remove-a-few-unused-variable-to-avoid-gcc-warnings.patch  04-fix-protential-uninitialized-memory-accessing.patch  05-avoid-gcc-warnings.patch  06-improve-precision.patch  07-update-manpage-adjtimex.8.patch  08-FTCBFS-uses-the-build-architecture-compiler.patch  09-adjtimex.8-Some-fixes-to-the-manual.patch  10-STA_NANO-confuses-adjtimex-8.patch  11-Fix-ntpdate-command.patch  series
debian/po/: cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  gl.po  it.po  ja.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot  vi.po
debian/po/Downloads/: ru.po  sv.po
